// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorSelector Component snapshots should match snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: initial;
}

.c1 {
  background-color: #ffffff;
  border-radius: 100%;
  box-shadow: 0px 0px 0px 1px #cecece;
  border: 2px solid #ffffff;
  -webkit-transform: scale(.8);
  -ms-transform: scale(.8);
  transform: scale(.8);
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  padding: .75em;
  -webkit-transform: scale(1) !important;
  -ms-transform: scale(1) !important;
  transform: scale(1) !important;
  background: #e25454;
}

.c1:hover {
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

<ColorSelector__Wrapper
  onClick={null}
>
  <span
    className="c0"
    onClick={null}
  >
    <ColorSelector__ColorCircle
      color="#e25454"
      disableInteraction={true}
      isMissingColor={false}
      selected={false}
    >
      <span
        className="c1"
        color="#e25454"
        selected={false}
      />
    </ColorSelector__ColorCircle>
  </span>
</ColorSelector__Wrapper>
`;

exports[`ColorSelector Component snapshots should match snapshot 2`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 {
  background-color: #ffffff;
  border-radius: 100%;
  box-shadow: 0px 0px 0px 1px #cecece;
  border: 2px solid #ffffff;
  -webkit-transform: scale(.8);
  -ms-transform: scale(.8);
  transform: scale(.8);
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  padding: .75em;
  background: #5F9DC7;
}

.c1:hover {
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

<ColorSelector__Wrapper
  onClick={[Function]}
>
  <span
    className="c0"
    onClick={[Function]}
  >
    <ColorSelector__ColorCircle
      color="#5F9DC7"
      disableInteraction={false}
      isMissingColor={false}
      selected={false}
    >
      <span
        className="c1"
        color="#5F9DC7"
        selected={false}
      />
    </ColorSelector__ColorCircle>
  </span>
</ColorSelector__Wrapper>
`;

exports[`ColorSelector Component snapshots should match snapshot 3`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: initial;
}

.c1 {
  background-color: #ffffff;
  border-radius: 100%;
  box-shadow: 0px 0px 0px 1px #cecece;
  border: 2px solid #ffffff;
  -webkit-transform: scale(.8);
  -ms-transform: scale(.8);
  transform: scale(.8);
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  padding: .75em;
  background-image: url(images/patternImage.jpg);
}

.c1:hover {
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

<ColorSelector__Wrapper>
  <span
    className="c0"
  >
    <ColorSelector__ColorCircle
      disableInteraction={false}
      isMissingColor={false}
      patternImage="images/patternImage.jpg"
      selected={false}
    >
      <span
        className="c1"
        selected={false}
      />
    </ColorSelector__ColorCircle>
  </span>
</ColorSelector__Wrapper>
`;

exports[`ColorSelector Component snapshots should match snapshot 4`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: initial;
}

.c1 {
  background-color: #ffffff;
  border-radius: 100%;
  box-shadow: 0px 0px 0px 1px #cecece;
  border: 2px solid #ffffff;
  -webkit-transform: scale(.8);
  -ms-transform: scale(.8);
  transform: scale(.8);
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  padding: .75em;
  background: #aecc76;
}

.c1:hover {
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

.c2 {
  margin-left: 8px;
  font-weight: 400;
}

<ColorSelector__Wrapper>
  <span
    className="c0"
  >
    <ColorSelector__ColorCircle
      color="#aecc76"
      disableInteraction={false}
      isMissingColor={false}
      selected={false}
    >
      <span
        className="c1"
        color="#aecc76"
        selected={false}
      />
    </ColorSelector__ColorCircle>
    <ColorSelector__Text
      selected={false}
    >
      <span
        className="c2"
        selected={false}
      >
        Lime green
      </span>
    </ColorSelector__Text>
  </span>
</ColorSelector__Wrapper>
`;

exports[`ColorSelector Component snapshots should match snapshot 5`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: initial;
}

.c1 {
  background-color: #ffffff;
  border-radius: 100%;
  box-shadow: 0px 0px 0px 1px #cecece;
  border: 2px solid #ffffff;
  -webkit-transform: scale(.8);
  -ms-transform: scale(.8);
  transform: scale(.8);
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  padding: .75em;
  -webkit-transform: scale(1) !important;
  -ms-transform: scale(1) !important;
  transform: scale(1) !important;
  background: #aecc76;
}

.c1:hover {
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

.c2 {
  margin-left: 8px;
  font-weight: 500;
}

<ColorSelector__Wrapper>
  <span
    className="c0"
  >
    <ColorSelector__ColorCircle
      color="#aecc76"
      disableInteraction={false}
      isMissingColor={false}
      selected={true}
    >
      <span
        className="c1"
        color="#aecc76"
        selected={true}
      />
    </ColorSelector__ColorCircle>
    <ColorSelector__Text
      selected={true}
    >
      <span
        className="c2"
        selected={true}
      >
        Lime green
      </span>
    </ColorSelector__Text>
  </span>
</ColorSelector__Wrapper>
`;

exports[`ColorSelector Component snapshots should match snapshot 6`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c1 {
  background-color: #ffffff;
  border-radius: 100%;
  box-shadow: 0px 0px 0px 1px #cecece;
  border: 2px solid #ffffff;
  -webkit-transform: scale(.8);
  -ms-transform: scale(.8);
  transform: scale(.8);
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  width: 40px;
  height: 40px;
  background: #e25454;
}

.c1:hover {
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

<ColorSelector__Wrapper
  onClick={[Function]}
>
  <span
    className="c0"
    onClick={[Function]}
  >
    <ColorSelector__ColorCircle
      color="#e25454"
      disableInteraction={false}
      fixedSize="40px"
      isMissingColor={false}
      selected={false}
    >
      <span
        className="c1"
        color="#e25454"
        selected={false}
      />
    </ColorSelector__ColorCircle>
  </span>
</ColorSelector__Wrapper>
`;

exports[`ColorSelector Component snapshots should match snapshot 7`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: initial;
}

.c1 {
  background-color: #ffffff;
  border-radius: 100%;
  box-shadow: 0px 0px 0px 1px #cecece;
  border: 2px solid #ffffff;
  -webkit-transform: scale(.8);
  -ms-transform: scale(.8);
  transform: scale(.8);
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  background-repeat: no-repeat;
  background-position: 50% 50%;
  padding: .75em;
  position: relative;
  background: #ffffff;
}

.c1:hover {
  -webkit-transform: scale(.9);
  -ms-transform: scale(.9);
  transform: scale(.9);
}

.c1::after {
  position: absolute;
  content: '?';
  text-align: center;
  top: 50%;
  left: 50%;
  -webkit-transform: translateX(-50%) translateY(-50%);
  -ms-transform: translateX(-50%) translateY(-50%);
  transform: translateX(-50%) translateY(-50%);
  font-weight: 500;
}

<ColorSelector__Wrapper>
  <span
    className="c0"
  >
    <ColorSelector__ColorCircle
      disableInteraction={false}
      isMissingColor={true}
      selected={false}
    >
      <span
        className="c1"
        selected={false}
      />
    </ColorSelector__ColorCircle>
  </span>
</ColorSelector__Wrapper>
`;
